Complete hello world example

--- a/hello-world/Makefile
+++ b/hello-world/Makefile
@@ -1,4 +1,4 @@
-obj-m += mod.o
+obj-m += hello_world.o
 
 KERNELDIR := /lib/modules/$(shell uname -r)/build
 
@@ -7,3 +7,9 @@ all:
 
 clean:
 	make -C $(KERNELDIR) M=$(PWD) clean
+
+insert:
+	insmod hello_world.ko
+
+remove:
+	rmmod hello_world.ko
